--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       <tr>
         <th>Sample 1 Ours</th>
         <th>Sample 1 GT</th>
-        <th>Sample 2 Ours</th>
+        <th class="sep">Sample 2 Ours</th>
         <th>Sample 2 GT</th>
       </tr>
       <tr>
         <td><img src="./allen_gifs/dna_ours_3.gif" width="128"></td>
         <td><img src="./allen_gifs/dna_gt_3_-128_19_170.gif" width="128"></td>
-        <td><img src="./allen_gifs/dna_ours_4.gif" width="128"></td>
+        <td class="sep"><img src="./allen_gifs/dna_ours_4.gif" width="128"></td>
         <td><img src="./allen_gifs/dna_gt_4_-17_-11_-17.gif" width="128"></td>
       </tr>
     </table>
@@ -93,13 +93,13 @@
       <tr>
         <th>Sample 1 Ours</th>
         <th>Sample 1 GT</th>
-        <th>Sample 2 Ours</th>
+        <th class="sep">Sample 2 Ours</th>
         <th>Sample 2 GT</th>
       </tr>
       <tr>
         <td><img src="./allen_gifs/membrane_ours_3.gif" width="128"></td>
         <td><img src="./allen_gifs/membrane_gt_3_-1_3_145.gif" width="128"></td>
-        <td><img src="./allen_gifs/membrane_ours_4.gif" width="128"></td>
+        <td class="sep"><img src="./allen_gifs/membrane_ours_4.gif" width="128"></td>
         <td><img src="./allen_gifs/membrane_gt_4_334_-32_-3.gif" width="128"></td>
       </tr>
     </table>
@@ -109,13 +109,13 @@
       <tr>
         <th>Sample 1 Ours</th>
         <th>Sample 1 GT</th>
-        <th>Sample 2 Ours</th>
+        <th class="sep">Sample 2 Ours</th>
         <th>Sample 2 GT</th>
       </tr>
       <tr>
         <td><img src="./allen_gifs/strucutre_ours_3.gif" width="128"></td>
         <td><img src="./allen_gifs/structure_gt_3_-24_12_31.gif" width="128"></td>
-        <td><img src="./allen_gifs/structure_ours_4.gif" width="128"></td>
+        <td class="sep"><img src="./allen_gifs/structure_ours_4.gif" width="128"></td>
         <td><img src="./allen_gifs/structure_gt_4_-19_-31_-36.gif" width="128"></td>
       </tr>
     </table>
