--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       max-width: 1100px;
       margin: 0 auto;
     }
+    .sep {
+    border-left: 2px solid #ccc;
+    }
     h1 {
       font-size: 26px;
       text-align: center;
