--- a/index.html
+++ b/index.html
@@ -129,6 +129,46 @@ sup {
       </tr>
     </table>
 
+
+    <h3>MicroDiffusion Dataset</h3>
+
+<h3>Dendrite</h3>
+<table>
+  <tr>
+    <th>Ours</th>
+    <th>GT</th>
+  </tr>
+  <tr>
+    <td><img src="./microdiffusion_gifs/dendrite_ours.gif" width="128"></td>
+    <td><img src="./microdiffusion_gifs/dendrite_gt_87_-15_-4.gif" width="128"></td>
+  </tr>
+</table>
+
+<h3>Neurons</h3>
+<table>
+  <tr>
+    <th>Ours</th>
+    <th>GT</th>
+  </tr>
+  <tr>
+    <td><img src="./microdiffusion_gifs/neurons_ours.gif" width="128"></td>
+    <td><img src="./microdiffusion_gifs/neurons_gt_-249_-4_79.gif" width="128"></td>
+  </tr>
+</table>
+
+<h3>Vasculature</h3>
+<table>
+  <tr>
+    <th>Ours</th>
+    <th>GT</th>
+  </tr>
+  <tr>
+    <td><img src="./microdiffusion_gifs/vasculature_ours.gif" width="128"></td>
+    <td><img src="./microdiffusion_gifs/vasculature_gt_44_-17_97.gif" width="128"></td>
+  </tr>
+</table>
+
+
   </div>
 </body>
 </html>
